--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--voilet);
@@ -14,10 +15,6 @@ body {
   justify-content: flex-start;
   height: 100vh;
   box-sizing: border-box;
-  /* background-image: url(./images/bg-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: cover; */
-  /* align-items: center; */
 }
 
 .container {
@@ -26,18 +23,14 @@ body {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  /* align-items: flex-start; */
+  justify-content: center;
   margin-left: 50px;
   margin-right: 50px;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
-/* .bgimage {
-  background-image: url(./images/bg-mobile.svg);
-  background-size: cover;
-  width: 100%;
-  height: 300px;
-} */
-.Logo {
+
+.logo {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -45,14 +38,14 @@ body {
   width: 150px;
   margin-left: 50px;
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
-.Main-section {
+.main-section {
   display: flex;
   flex-direction: column;
 }
-.Secondary-section {
+.secondary-section {
   margin-top: 60px;
   margin-left: 20px;
   margin-right: 20px;
@@ -66,11 +59,11 @@ body {
   text-align: center;
 }
 
-.Secondary-section:nth-child(1) {
+.secondary-section:nth-child(1) {
   justify-content: center;
   margin-left: 20px;
 }
-.Paragraph {
+.paragraph {
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -91,7 +84,7 @@ body {
   border-radius: 30px 30px 30px 30px;
   margin-bottom: 10px;
 }
-.Icons {
+.icons {
   display: flex;
   justify-content: center;
 }
@@ -103,21 +96,17 @@ body {
 }
 i {
   border-radius: 50%;
+  width: 40px;
+  height: 40px;
   border: 2px solid white;
   padding: 10px;
   color: white;
 }
 
 @media (min-width: 768px) {
-  /* body {
-    background-image: url(./images/bg-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-  } */
-
-  .Logo {
+  .logo {
     margin-top: 80px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     width: 200px;
   }
 
@@ -127,36 +116,22 @@ i {
     background-size: cover;
     display: flex;
     flex-direction: row;
-    justify-self: center;
-    align-items: center;
-    flex-grow: 1;
-  }
-  /* .Logo {
-    display: flex;
-    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    width: 150px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  } */
-  .Icons {
-    display: flex;
-    justify-content: end;
-    margin-right: 100px;
   }
 
-  .Secondary-section {
+  .icons {
     display: flex;
-    flex-direction: row;
-    align-self: flex-start;
-    justify-content: flex-start;
-    text-align: left;
-    margin-left: 40px;
-    margin-top: 160px;
-    flex-grow: 1;
+    justify-content: flex-end;
+    margin-right: 100px;
   }
-  .Paragraph {
+  .main-section {
+    min-width: 284px;
+    display: flex;
+    min-height: 480px;
+  }
+
+  .paragraph {
     text-align: left;
   }
   .attribution {
