--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   --voilet: hsl(257, 40%, 49%);
   --soft-magenta: hsl(300, 69%, 71%);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -9,60 +10,54 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: var(--voilet);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   height: 100vh;
   box-sizing: border-box;
-}
-
-.container {
+  background-color: var(--voilet);
   background-image: url(./images/bg-mobile.svg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+/*create a wrapper */
+.wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 50px;
-  margin-right: 50px;
-  flex-grow: 1;
-  flex-shrink: 1;
+  justify-content: flex-start;
+  /* max-width: 580px; */
+  margin: auto;
+  padding: 1.5rem;
+}
+
+.container {
+  max-width: 580px;
+  margin: auto;
+}
+.title {
+  text-align: center;
+}
+header {
+  max-width: 580px;
+  margin: auto;
+}
+
+.main-image {
+  width: 100%;
 }
 
 .logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 150px;
-  margin-left: 50px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  /* width: 100%; */
 }
 
 .main-section {
   display: flex;
   flex-direction: column;
 }
+
 .secondary-section {
   margin-top: 60px;
-  margin-left: 20px;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
   color: white;
-  flex-shrink: 1;
-  text-align: center;
 }
 
-.secondary-section:nth-child(1) {
-  justify-content: center;
-  margin-left: 20px;
-}
 .paragraph {
   margin-top: 20px;
   display: flex;
@@ -75,25 +70,27 @@ body {
 }
 
 .button {
-  margin-top: 30px;
-  margin-bottom: 100px;
   padding-top: 15px;
   padding-left: 100px;
   padding-right: 100px;
   padding-bottom: 15px;
   border-radius: 30px 30px 30px 30px;
-  margin-bottom: 10px;
+  display: block;
+  margin: 2rem auto;
 }
+
 .icons {
   display: flex;
   justify-content: center;
 }
+
 .fab {
   margin-top: 80px;
   margin-left: 20px;
   font-size: 30px;
   margin-bottom: 20px;
 }
+
 i {
   border-radius: 50%;
   width: 40px;
@@ -103,7 +100,25 @@ i {
   color: white;
 }
 
+
 @media (min-width: 768px) {
+
+}
+@media (min-width: 1080px) {
+  body {
+    background-image: url(./images/bg-desktop.svg);
+  }
+
+  .wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  header {
+    flex: 1 1 60%;
+  }
+
   .logo {
     margin-top: 80px;
     margin-bottom: 20px;
@@ -111,13 +126,7 @@ i {
   }
 
   .container {
-    background-image: url(./images/bg-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    flex: 1 1 40%;
   }
 
   .icons {
@@ -125,15 +134,21 @@ i {
     justify-content: flex-end;
     margin-right: 100px;
   }
+
   .main-section {
     min-width: 284px;
     display: flex;
     min-height: 480px;
   }
 
+  footer {    
+    flex: 1;
+  }
+
   .paragraph {
     text-align: left;
   }
+
   .attribution {
     margin-bottom: 20px;
     color: white;
