--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   justify-content: flex-start;
   height: 100vh;
   box-sizing: border-box;
-}
-
-.container {
   background-image: url(./images/bg-mobile.svg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -101,6 +101,9 @@ i {
   border: 2px solid white;
   padding: 10px;
   color: white;
+}
+.main-image {
+  width: 100%;
 }
 
 @media (min-width: 768px) {
