Updated Readme file, made further changes to match the design

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   height: 100vh;
   box-sizing: border-box;
   background-image: url(./images/bg-mobile.svg);
@@ -20,21 +21,26 @@ body {
   background-size: cover;
 }
 
+.container-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100vh;
+  box-sizing: border-box;
+  max-width: 1440px;
+  height: 100vh;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0 50px;
   flex-grow: 1;
   flex-shrink: 1;
 }
 
 .logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
   width: 150px;
   margin-left: 50px;
   margin-top: 50px;
@@ -45,6 +51,11 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.main-image {
+  width: 100%;
+  height: auto;
+}
 .secondary-section {
   margin-top: 60px;
   margin-left: 20px;
@@ -53,10 +64,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   flex-wrap: wrap;
   color: white;
   flex-shrink: 1;
-  text-align: center;
 }
 
 .secondary-section:nth-child(1) {
@@ -65,34 +76,32 @@ body {
 }
 .paragraph {
   margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  text-align: center;
-  flex-shrink: 1;
-  flex-grow: 1;
   margin-bottom: 10px;
 }
 
 .button {
   margin-top: 30px;
-  margin-bottom: 100px;
   padding-top: 15px;
   padding-left: 100px;
   padding-right: 100px;
   padding-bottom: 15px;
   border-radius: 30px 30px 30px 30px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 5px 1px hsl(0deg 0% 0% / 21%);
+}
+.button:hover {
+  background-color: rgb(14, 10, 1);
+  color: white;
 }
 .icons {
   display: flex;
   justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 20px;
 }
 .fab {
-  margin-top: 80px;
   margin-left: 20px;
   font-size: 30px;
-  margin-bottom: 20px;
 }
 i {
   border-radius: 50%;
@@ -101,12 +110,23 @@ i {
   border: 2px solid white;
   padding: 10px;
   color: white;
+  position: relative;
 }
-.main-image {
-  width: 100%;
+
+i:before {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (min-width: 768px) {
+  body {
+    background-image: url(./images/bg-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .logo {
     margin-top: 80px;
     margin-bottom: 20px;
@@ -114,13 +134,20 @@ i {
   }
 
   .container {
-    background-image: url(./images/bg-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    gap: 50px;
+    position: relative;
+  }
+  .secondary-section {
+    text-align: left;
+    align-items: flex-start;
+  }
+  .button {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   .icons {
@@ -130,13 +157,11 @@ i {
   }
   .main-section {
     min-width: 284px;
-    display: flex;
-    min-height: 480px;
+    height: auto;
+    flex-basis: 50%;
+    flex-shrink: 0;
   }
 
-  .paragraph {
-    text-align: left;
-  }
   .attribution {
     margin-bottom: 20px;
     color: white;
